<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_margin = "@dimen/cardview_compat_inset_shadow"
        android:layout_height="wrap_content" >

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:paddingLeft="8dp"
            android:id="@+id/imagev"
            android:src="@drawable/france"
            android:contentDescription="@string/france_flag" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/title"
              android:textStyle="bold"
              android:textSize="18sp"
              android:paddingLeft="8dp"
              android:paddingTop="10dp"
               android:id="@+id/title"
              android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:paddingLeft="8dp"
                android:paddingTop="5dp"
                android:id="@+id/description"
                android:layout_weight="1"/>

        </LinearLayout>
     </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>