<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">
  

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:paddingLeft="8dp"
        android:id="@+id/imageview"
        android:src="@drawable/france"
        android:contentDescription="@string/france_flag" />

    <LinearLayout
        android:paddingLeft="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/dDescriptionID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/Description"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:id="@+id/dNameId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:text="@string/Name"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/dDescriptionID"
        app:layout_constraintTop_toBottomOf="@+id/dDescriptionID"
        app:layout_constraintVertical_bias="0.0" />
    </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="14dp"
        android:paddingTop="30dp"
        android:paddingRight="14dp"
        android:paddingBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

  <androidx.drawerlayout.widget.DrawerLayout

      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:id="@+id/dl"
      android:orientation="vertical">

    <RelativeLayout
         android:id="@+id/Fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu">


    </com.google.android.material.navigation.NavigationView>

  </androidx.drawerlayout.widget.DrawerLayout>



</androidx.constraintlayout.widget.ConstraintLayout>